syntax = "proto3";

package todoPackage;

service Todo {
    rpc createTodo(TodoItem) returns (TodoItem);
    rpc readTodos(voidNoParam) returns (TodoItems);
    rpc readTodosStream(voidNoParam) returns (stream TodoItem);
    rpc createPrompt(voidNoParam) returns (prompt1);
    rpc optionSelection(option) returns (result);
    rpc choice(secondSelection) returns(orderConformation);
    
}

message voidNoParam {}

message TodoItem {
    int32 id = 1;
    string text = 2;
}

message TodoItems {
    repeated TodoItem items = 1;
}

message prompt1 {
    string Qn1 = 1;
}

message option {
    string options = 1;
}

message result { 
    string category = 1;
}

message secondSelection {
    string options = 1;
    string selection = 2;
}
message orderConformation {
    string output = 1;
}
